		- Component mixer strips have been dropped.

XXXX-XX-XX the hydrogen team <hydrogen-devel@lists.sourceforge.net>
	* Release 1.2.5
	* Fixed
		- Fix compilation with LASH support enabled (#2076).
		- Fix Hue slider in Preferences > Appearance > Color (#2081)
		- Show the Crash Reporter and exit with return code `1` on unhandled
			exceptions.
		- Fix crashes in SampleEditor (#2092).

2024-12-07 the hydrogen team <hydrogen-devel@lists.sourceforge.net>
	* Release 1.2.4
	* Added
		- MIDI and OSC commands
				- `CLEAR_SELECTED_INSTRUMENT` - to remove all notes of the selected
				  pattern associated with the currently selected instrument.
				- `CLEAR_PATTERN` - to remove all notes of the selected pattern.
				- `INSTRUMENT_PITCH` - to adjust the pitch of an instrument.
		- OSC commands
				- `NOTE_ON` and `NOTE_OFF` which are handled like incoming MIDI events
				  without triggering their associated actions.
				- `CLEAR_INSTRUMENT` - to remove all notes of the selected pattern
 				  associated with the provided instrument number.
		- CLI option:
			- `-O`/`--osc-port` to use a custom OSC port in both `hydrogen`
			  and `h2cli`.
			- `-L`/`--log-file` to provide a path to an alternative log file.
			- `-T`/`--log-timestamps` to add timestamps to all log messages.
			- `--config` to use a different user-level config file.
			- `--compression-level` for `h2cli` to set the trade-off between max.
				quality (`.mp3` and `.ogg`)/max. speed (`.flac`) (`0.0`) and max.
				compression (`1.0`) for exported audio files.
		- Adding support for importing and exporting audio files of format `.mp3`,
			`.opus`, `.au`, `.caf`, `.voc`, `.w64`. Drumkits containing those formats
			can be loaded with older versions of Hydrogen too. `libsndfile` >= `1.1.0`
			is required on your system for MP3 support. (#2023)
		- `X-NSM-Exec` entry added to `org.hydrogenmusic.Hydrogen.desktop` by
			@grammoboy2 (#2042).
		- Delete key does now remove selected notes and notes under cursor in