@@ -659,22 +659,37 @@ void ExportSongDialog::exportTracks()
 			}
 		}
 
-		QStringList filenameList =  exportNameTxt->text().split( m_sExtension );
-
-		QString firstItem;
-		if( !filenameList.isEmpty() ){
-			firstItem = filenameList.first();
+		// Ensure we use the right extension.
+		const QString sSuffix = QString( ".%1" ).arg( m_sExtension );
+		const QString sTemplateName = exportNameTxt->text();
+		QString sBaseName = sTemplateName;
+		if ( sTemplateName.endsWith( sSuffix, Qt::CaseInsensitive ) ) {
+			sBaseName.chop( sSuffix.size() );
 		}
-		const QString sFilename = QString( "%1-%2.%3" ).arg( firstItem )
-			.arg( findUniqueExportFilenameForInstrument(
-					  pInstrumentList->get( m_nInstrument ) ) )
-			.arg( m_sExtension );
 
-		if ( QFile( sFilename ).exists() == true && m_bQfileDialog == false &&
+		const QString sInstrumentName = findUniqueExportFilenameForInstrument(
+			pInstrumentList->get( m_nInstrument ) );
+		QString sExportName;
+		if ( sBaseName.isEmpty() || sBaseName.endsWith( "/" ) ||
+			 sBaseName.endsWith( "\\" ) ) {
+			// Allow to use just the instrument names when leaving the song name
+			// blank.
+			sExportName = QString( "%1%2" ).arg( sBaseName )
+				.arg( sInstrumentName );
+		}
+		else {
+			sExportName = QString( "%1-%2" ).arg( sBaseName )
+				.arg( sInstrumentName );
+		}
+
+		const QString sFileName = QString( "%1%2" ).arg( sExportName )
+			.arg( sSuffix );
+
+		if ( QFile( sFileName ).exists() == true && m_bQfileDialog == false &&
 			 ! m_bOverwriteFiles ) {
 			const int nRes = QMessageBox::information(
 				this, "Hydrogen", tr( "The file %1 exists. \nOverwrite the existing file?")
-				.arg( sFilename ),
+				.arg( sFileName ),
 				QMessageBox::Yes | QMessageBox::No | QMessageBox::YesToAll );
 			if ( nRes == QMessageBox::No ) {
 				return;
@@ -695,7 +710,7 @@ void ExportSongDialog::exportTracks()
 		
 		pInstrumentList->get(m_nInstrument)->set_currently_exported( true );
 		
-		pHydrogen->startExportSong( sFilename );
+		pHydrogen->startExportSong( sFileName );
 
 		if(! (m_nInstrument == pInstrumentList->size()) ){
 			m_nInstrument++;
